--- a/index.html
+++ b/index.html
@@ -4,29 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proto-OKN Map</title>
+    <title>Open Knowledge Network Map</title>
   </head>
   <body>
-    <h1>OKN Map</h1>
-    <div id="app"></div>
-    <div>
-    <section>
-      <p>This is a prototype of the Proto-OKN Map.</p>
-      <p>It is generated through the following series of steps:</p>
-      <ul>
-        <li>RDF data is processed into a LinkML schema using <a href="https://github.com/frink-okn/schema-gen" target="_blank">a set of scripts</a>.</li>
-        <li>This schema is then itself turned into RDF using <a href="https://linkml.io/linkml/generators/rdf.html" target="_blank">the LinkML runtime's RDF generator</a>.</li>
-        <li>The RDF representation of that schema is then directly queried with SPARQL using this interface.</li>
-      </ul>
-      <p>How is this used?</p>
-      <ul>
-        <li>At the start only Theme 1 graphs (in green) should be visible.</li>
-        <li>Clicking on one of the Theme 1 graphs will display arrows pointing to other Theme 1 graphs, as well as other RDF ontologies (in gray), that are referred to by that graph.</li>
-        <li>Clicking on a graph with references to or from it will expand to show a set of classes defined in that graph.</li>
-        <li>Clicking on a class will, if there are mappings of that class to other classes, show links to those other classes.</li>
-      </ul>
-    </section>
+    <div class="top-matter">
+      <div class="banner" style="display: inline-block">
+        <img src="static/Purple-no-background-300x200.png" style="height: 100px;padding-top: 1em;">
+        <h1 style="display: inline-block;vertical-align: top;">Open Knowledge Network Map</h1>
+      </div>
+      <div class="sub-banner">
+        <p class="opening-blurb">Explore the Prototype Open Knowledge Network (Proto-OKN) through this dynamic map, designed to help you navigate and discover interconnected information and resources of interest.</p>
+      </div>
     </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
